--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+#container{
+	margin: 20px;
+	
+}
+#a::before{
+	content:"Before element ";
+	color:red;
+	font-size:20px;
+}
+#a::after{
+	content:" After element ";
+	color: red;
+	font-size:20px;
+}
