--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@
 }
 #a::before{
 	content:"Before element ";
-	color:red;
+	color:#f00;
 	font-size:20px;
 }
 #a::after{
 	content:" After element ";
-	color: red;
+	color: #f00;
 	font-size:20px;
 }
