--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@
 }
 #a::before{
 	content:"Before Element ";
-	color: #f00;
+	color: rgb(255, 0, 0);
 	font-size:20px;
 }
 #a::after{
 	content:" After Element";
-	color: #f00;
+	color:rgb(255, 0, 0);
 	font-size:20px;
 }
