--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@
 	margin: 20px;
 	
 }
-#a::before{
+#container::before{
 	content:"Before Element";
 	color: rgb(255, 0, 0);
 	font-size:20px;
 }
-#a::after{
+#container::after{
 	content:"After Element";
 	color:rgb(255, 0, 0);
 	font-size:20px;
